# fav-project

./: .gitignore  LICENSE  README.md
FavLibrary/: CMakeLists.txt
FavLibrary/FavLibrary/: ColorBase.cpp  Fav.cpp  Fav.h  FavReader.cpp  FavReader.h  FavSettings.h  FavWriter.cpp  FavWriter.h  Geometry.h  Material.h  Metadata.cpp  Metadata.h  Object.cpp  Object.h  Palette.h  Structure.cpp  Structure.h  Vector3D.h  Voxel.cpp  Voxel.h  XML_Rip.cpp  XML_Rip.h  main.cpp
FavLibrary/FavLibrary.Win/: FavLibrary.Win.sln  FavLibraryApp.sln  Readme!!.txt
FavLibrary/FavLibrary.Win/FavLibrary.App/: FavLibrary.App.csproj  Form1.Designer.cs  Form1.cs
FavLibrary/FavLibrary.Win/FavLibrary.App/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
FavLibrary/FavLibrary.Win/FavLibrary.Net/: AssemblyInfo.cpp  Class1.cs  FavLibrary.Net.csproj  FavLibrary.Net.h  FavLibrary.Net.vcxproj  ReadMe.txt  Stdafx.cpp  Stdafx.h
FavLibrary/FavLibrary.Win/FavLibrary.Net/FavLibrary.Net/: AssemblyInfo.cpp  FavLibrary.Net.cpp  FavLibrary.Net.h  FavLibrary.Net.vcxproj  Stdafx.cpp  Stdafx.h
FavLibrary/FavLibrary.Win/FavLibrary.Net/Properties/: AssemblyInfo.cs
FavLibrary/FavLibrary.Win/FavLibrary.TestApp/: FavLibrary.TestApp.vcxproj  FavLibrary.TestApp.vcxproj.filters  ReadMe.txt  main.cpp  stdafx.cpp  stdafx.h
FavLibrary/FavLibrary.Win/FavLibrary.Win/: FavLibrary.Win.vcxproj  FavLibrary.Win.vcxproj.filters  Grida.cpp  Grida.h
FavLibrary/FavLibrary.Win/FavLibraryApp/: FavLibraryApp.csproj  Form1.Designer.cs  Form1.cs  Program.cs
FavLibrary/FavLibrary.xcodeproj/: project.pbxproj
FavLibrary/FavLibrary.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FavLibrary/FavLibrary/Exception/: FavException.h
FavLibrary/FavLibrary/Object/: Grid.cpp  Grid.h  Object.cpp  Object.h  Structure.cpp  Structure.h
FavLibrary/FavLibrary/Palette/: Geometry.cpp  Geometry.h  Material.cpp  Material.h  Palette.cpp  Palette.h
FavLibrary/FavLibrary/Primitive/: Color.cpp  Color.h  FavPrimitive.cpp  FavPrimitive.h  Point3D.cpp  Point3D.h  Vector3D.cpp  Vector3D.h
FavLibrary/buildLib/: CMakeLists.txt
FavLibrary/buildTest/: CMakeLists.txt  testDLL.cpp  testReader.cpp  testWriter.cpp
FavLibrary/javascript/: README.md  index.html
FavLibrary/javascript/data/: ChessKing_Color_reso1_v1.fav
FavLibrary/javascript/js/: FAVExporter.js  FAVLoader.js
src/: Fav.cpp  (+6 more)
(+101 files in other folders)
